<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/tab_types"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/tab_types"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/tab_list"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/tab_list"
        app:showAsAction="always" />
    <item
        android:id="@+id/tab_calendar"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/tab_calendar"
        app:showAsAction="always" />
    <item
        android:id="@+id/tab_profile"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/tab_new_profile"
        app:showAsAction="always" />

</menu>