<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title"
        style="@style/Main.Text.Medium"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        android:text="@string/settings_capybara_title"/>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/settings_app_version"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_marginBottom="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_version"
        tools:listitem="@layout/item_settings"/>

    <TextView
        android:id="@+id/exit"
        style="@style/Main.Text.Medium"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_clickable_size"
        android:paddingHorizontal="@dimen/margin_m"
        android:layout_marginBottom="@dimen/margin_m"
        android:gravity="center"
        android:text="@string/settings_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
