<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/edit"
        android:layout_width="@dimen/min_clickable_size"
        android:layout_height="@dimen/min_clickable_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_marginEnd="@dimen/margin_s"
        android:background="@drawable/green_border_bgr"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/done"
        android:layout_width="@dimen/min_clickable_size"
        android:layout_height="@dimen/min_clickable_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_marginEnd="@dimen/margin_s"
        android:background="@drawable/green_border_bgr"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/ic_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/survey_name"
        style="@style/Main.Text.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"
        android:paddingHorizontal="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit"
        app:layout_constraintBottom_toTopOf="@id/survey_date"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Вакцинация ковид"
        />

    <TextView
        android:id="@+id/survey_date"
        style="@style/Main.Text.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_marginEnd="@dimen/margin_m"
        android:paddingHorizontal="@dimen/margin_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/survey_name"
        tools:text="01.01.2020"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/survey_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"
        android:background="@color/transparent"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintBottom_toTopOf="@id/survey_date_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/done"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/survey_name_et"
            style="@style/Main.Text.MediumSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:hint="@string/survey_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="0dp"
            tools:ignore="RtlSymmetry"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/survey_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"
        android:background="@color/transparent"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/survey_name_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/survey_date_et"
            style="@style/Main.Text.MediumSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:hint="@string/survey_date"
            android:focusable="false"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="0dp"
            tools:ignore="RtlSymmetry"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/change_survey_type"
        style="@style/Main.Text.MediumSmall"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_clickable_size"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/margin_s"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="@string/survey_change_survey_type"
        app:drawableEndCompat="@drawable/ic_arrow_down"
        android:drawablePadding="@dimen/margin_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/survey_date_layout"
        />

    <TextView
        android:id="@+id/change_survey_profile"
        style="@style/Main.Text.MediumSmall"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_clickable_size"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/margin_s"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="@string/survey_change_survey_profile"
        app:drawableEndCompat="@drawable/ic_arrow_down"
        android:drawablePadding="@dimen/margin_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_survey_type"
        />

    <TextView
        android:id="@+id/delete_survey"
        style="@style/Main.Text.Small"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_clickable_size"
        android:background="@drawable/red_border_bgr"
        android:layout_marginHorizontal="@dimen/margin_m"
        android:gravity="center"
        android:text="@string/survey_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/margin_m"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/current_survey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="edit, survey_name, survey_date"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/edit_survey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="survey_name_layout, survey_date_layout, change_survey_type, change_survey_profile, delete_survey, done"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
