<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/photo"
        android:layout_width="0dp"
        android:layout_height="@dimen/profile_photo_size"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_clickable_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_marginEnd="@dimen/margin_s"
        android:background="@drawable/green_border_bgr"
        android:contentDescription="@null"
        android:paddingHorizontal="@dimen/margin_m"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_clickable_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_marginEnd="@dimen/margin_s"
        android:background="@drawable/green_border_bgr"
        android:contentDescription="@null"
        android:paddingHorizontal="@dimen/margin_m"
        android:src="@drawable/ic_done"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/color_marker"
        android:layout_width="0dp"
        android:layout_height="@dimen/profile_marker_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo"
        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_name_margin_top"
        android:background="@drawable/gray_border_bgr"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin_m"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"
        android:background="@color/transparent"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_et"
            style="@style/Main.Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="0dp"
            tools:ignore="RtlSymmetry"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/change_color"
        style="@style/Main.Text"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_clickable_size"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/margin_s"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="@string/profile_choose_color"
        app:drawableEndCompat="@drawable/ic_palette"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        />

    <TextView
        android:id="@+id/change_photo"
        style="@style/Main.Text"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_clickable_size"
        android:layout_marginHorizontal="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_s"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="@string/profile_change_photo"
        app:drawableEndCompat="@drawable/ic_add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_color"
        />

    <TextView
        android:id="@+id/delete_profile"
        style="@style/Main.Text"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_clickable_size"
        android:layout_marginHorizontal="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_s"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="@string/profile_delete"
        app:drawableEndCompat="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_photo"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/current_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="profile_name, edit"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="name_layout, change_color, change_photo, delete_profile, done"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
